# stitching

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build_and_push_ecr.sh  convert_npy_to_yaml.py  entrypoint.sh  run.sh  run_folder.sh  switch_calibration.sh  test_docker.sh
include/: app.h  image_stitcher.h  sensor_data_interface.h  stitching_param_generator.h
params/: camchain_0.yaml  camchain_1.yaml
params_v0/: camchain_0.yaml  camchain_1.yaml
src/: app.cc  image_stitcher.cc  sensor_data_interface.cc  stitching_param_generator.cc
